<resources>
        <string name="app_name">TestActivity</string>
        <string name="main">Main Activity</string>
        <string name="move">MOVE</string>
        <string name="sub">Sub Activity</string>
        <string name="return_sub">RETURN</string>
        <string name="red">赤</string>
        <string name="blue">これ以降は未完成やわ</string>
        <string name="yellow">黄</string>string>
        <string name="home">ホームへ</string>string>

        //メイン画面(図2)
        <string name="game">ゲームであそぶ</string>string>
        <string name="grow">成長記録</string>string>
        <string name="wind">子育て窓口</string>string>
        <string name="setting">各種設定</string>string>

        //成長記録
        <string name="description">各種設定</string>string>

        //ゲーム選択画面(図3)
        <string name="play">ゲームをえらんでね</string>string>
        <string name="art">おえかき</string>string>
        <string name="apple">りんご</string>string>
        <string name="banana">ばなな</string>string>
        <string name="free">らくがき</string>string>
        <string name="save">ほぞん</string>string>
        <string name="color_red">あか</string>string>
        <string name="color_black">くろ</string>string>
        <string name="color_white">しろ</string>string>
        <string name="color_blue">あお</string>string>
        <string name="color_yellow">きいろ</string>string>
        <string name="color_green">みどり</string>string>
        <string name="delete">リセット</string>string>
        <string name="buy">おつかい</string>string>
        <string name="back">もどる</string>string>

        //店選択画面
        <string name="image_description">お店</string>string>

        //子育て窓口メイン画面(図24)
        <string name="post">投稿作成</string>string>
        <string name="ichiran">質問一覧</string>
        <string name="kensaku">キーワードを入力してください</string>
        <string name="toukou">投稿作成</string>
        <string name="question">回答一覧</string>
        <string name="kaitousakusei">回答作成</string>

        //設定画面(図30)
        <string name="button">Button</string>
        <string name="hint">ここに入力して下さい</string>
</resources>
