<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/button_green"
        android:text="@string/game"
        android:textColor="#ffffff"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button_grow"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />


    <Button
        android:id="@+id/button_grow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_yellow"
        android:text="@string/grow"
        android:textColor="#ffffff"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button_wind"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_game" />

    <Button
        android:id="@+id/button_wind"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_blue"
        android:text="@string/wind"
        android:textColor="#ffffff"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button_setting"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_grow" />

    <Button
        android:id="@+id/button_setting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_gray"
        android:text="@string/setting"
        android:textColor="#ffffff"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_wind" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        tools:layout_editor_absoluteY="91dp" />

    <ImageView
        android:layout_width="311dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>